package com.vladproduction.appliances.model;

public enum Category {
    BIG,
    SMALL
}
