package com.vladproduction.appliances.model;

public enum PowerType {
    AC220,
    AC110,
    ACCUMULATOR
}
